Initialize Redisson for caching

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+caching = "0.4.0"
 exposed = "0.49.0"
 hikari = "5.1.0"
 interaktions = "e92c2a407b"
@@ -11,7 +12,7 @@ kotlin-serialization = "1.6.3"
 ktoml = "0.5.1"
 postgresql = "42.7.3"
 prometheus = "0.16.0"
-
+redisson = "3.31.0"
 
 [libraries]
 # Discord libraries/frameworks
@@ -31,6 +32,11 @@ exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "e
 exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
+
+# Caching
+cache-api = { module = "dev.kord.cache:cache-api", version.ref = "caching" }
+cache-map = { module = "dev.kord.cache:cache-map", version.ref = "caching" }
+redisson = { module = "org.redisson:redisson", version.ref = "redisson" }
 
 # Config/Locale Purposes
 kotlin-hocon = { module = "org.jetbrains.kotlinx:kotlinx-serialization-hocon", version.ref = "kotlin-serialization" }
@@ -66,6 +72,12 @@ parsers = [
     "ktoml-file",
     "icu4j"
 ]
+caching = [
+    "cache-api",
+    "cache-map",
+    "redisson"
+]
+
 logger = [
     "slf4j",
     "prometheus-httpserver"
