--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       - "5432"
     env_file:
       - postgres.env
+
+  nabi-cachegrand:
+    image: cachegrand/cachegrand-server:latest
+    container_name: "nabi-cachegrand"
+    restart: always
+    ports:
+      - "6379"
