--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,21 @@
 [versions]
 caching = "0.4.0"
+caffeine = "3.1.8"
 exposed = "0.51.1"
 hikari = "5.1.0"
 icu4j = "75.1"
 interaktions = "0.0.22-SNAPSHOT"
-jda = "5.0.0-beta.23"
+jda = "5.0.0-beta.24"
 kotlin = "2.0.0"
 ktor = "2.3.11"
 logback = "1.4.12"
+lettuce = "6.4.0.M1"
 kord = "0.15.0-SNAPSHOT"
 kotlin-coroutines = "1.9.0-RC"
-kotlin-serialization = "1.6.3"
-ktoml = "0.5.1"
+kotlin-serialization = "1.7.1"
+ktoml = "0.5.2"
 postgresql = "42.7.3"
 prometheus = "0.16.0"
-redisson = "3.31.0"
 zstd = "1.5.6-3"
 
 [libraries]
@@ -40,12 +41,15 @@ exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "e
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
 
 # Caching
+caffeine-core = { module = "com.github.ben-manes.caffeine:caffeine", version.ref = "caffeine" }
 cache-api = { module = "dev.kord.cache:cache-api", version.ref = "caching" }
 cache-map = { module = "dev.kord.cache:cache-map", version.ref = "caching" }
-redisson = { module = "org.redisson:redisson", version.ref = "redisson" }
+cache-caffeine = { module = "dev.kord.cache:cache-caffeine", version.ref = "caching" }
+lettuce = { module = "io.lettuce:lettuce-core", version.ref = "lettuce" }
 
 # Config/Locale Purposes
 kotlin-hocon = { module = "org.jetbrains.kotlinx:kotlinx-serialization-hocon", version.ref = "kotlin-serialization" }
+kotlin-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlin-serialization"}
 ktoml-core = { module = "com.akuleshov7:ktoml-core", version.ref = "ktoml" }
 ktoml-file = { module = "com.akuleshov7:ktoml-file", version.ref = "ktoml" }
 icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
@@ -53,7 +57,7 @@ icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
 # Encoding/Decoding
 zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
 ktor-http = { module = "io.ktor:ktor-http", version.ref = "ktor" }
-ktor-client-encoding = { module = "io.ktor:ktor-client-encoding", version.ref = "ktor"}
+ktor-client-encoding = { module = "io.ktor:ktor-client-encoding", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor" }
 
@@ -106,9 +110,10 @@ ktor = [
 ]
 
 caching = [
+    "caffeine-core",
     "cache-api",
     "cache-map",
-    "redisson"
+    "lettuce"
 ]
 
 logger = [
