--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -7,18 +7,23 @@
     "node": "20.13.1"
   },
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "astro": "^4.10.2",
-    "unocss": "^0.61.0",
-    "sass": "^1.77.5"
+    "vue": "^3.4.33"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@unocss/vite": "^0.61.5",
+    "@iconify/iconify": "^3.1.1",
+    "@iconify/vue": "^4.1.2",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "typescript": "^5.4.5",
+    "unocss": "^0.61.5",
+    "vite": "^5.3.4",
+    "vitest": "^2.0.3"
   }
 }
