--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,6 +55,8 @@ zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
 ktor-http = { module = "io.ktor:ktor-http", version.ref = "ktor" }
 ktor-client-encoding = { module = "io.ktor:ktor-client-encoding", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-server = { module = "io.ktor:ktor-server", version.ref = "ktor" }
+ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor" }
 
 # Logger
@@ -102,6 +104,8 @@ ktor = [
     "ktor-http",
     "ktor-client-encoding",
     "ktor-client-core",
+    "ktor-server",
+    "ktor-server-netty",
     "ktor-utils"
 ]
 
