--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -9,8 +9,12 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
-    "jsx": "react",
+    "jsx": "react-jsx",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "esModuleInterop": true
   },
 
-  "include": ["src/**/*", "vite.config.ts", "vitest.config.ts", "uno.config.ts"]
+  "include": ["./src/**/*", "vite.config.ts", "vitest.config.ts", "uno.config.ts"]
 }
