--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,9 +12,11 @@ lettuce = "6.4.0.M1"
 kord = "0.15.0-SNAPSHOT"
 kotlin-coroutines = "1.9.0-RC"
 kotlin-serialization = "1.7.1"
+kotlin-poet = "1.18.1"
 ktoml = "0.5.2"
 postgresql = "42.7.3"
 prometheus = "0.16.0"
+slf4j = "2.0.13"
 zstd = "1.5.6-3"
 
 [libraries]
@@ -47,9 +49,13 @@ lettuce = { module = "io.lettuce:lettuce-core", version.ref = "lettuce" }
 zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
 kotlin-hocon = { module = "org.jetbrains.kotlinx:kotlinx-serialization-hocon", version.ref = "kotlin-serialization" }
 kotlin-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlin-serialization"}
+
+
+# i18n
+icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
+kotlin-poet = { module = "com.squareup:kotlinpoet", version.ref = "kotlin-poet" }
 ktoml-core = { module = "com.akuleshov7:ktoml-core", version.ref = "ktoml" }
 ktoml-file = { module = "com.akuleshov7:ktoml-file", version.ref = "ktoml" }
-icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
 
 # ktor
 ktor-http = { module = "io.ktor:ktor-http", version.ref = "ktor" }
@@ -61,6 +67,8 @@ ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor"
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor" }
 
 # Logger
+slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
+slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 prometheus-httpserver = { module = "io.prometheus:simpleclient_httpserver", version.ref = "prometheus" }
 
@@ -94,10 +102,10 @@ parsers = [
     "zstd",
     "kotlin-hocon",
     "kotlin-protobuf",
-    "ktoml-core",
-    "ktoml-file",
-    "icu4j"
+
 ]
+
+i18n = ["icu4j", "kotlin-poet", "ktoml-core", "ktoml-file" ]
 
 ktor = [
     "ktor-http",
