--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,12 @@ exposed = "0.52.0"
 hikari = "5.1.0"
 icu4j = "75.1"
 interaktions = "0.1.1"
-jda = "5.0.0-beta.24"
+jda = "5.0.1"
 kotlin = "2.0.0"
 ktor = "2.3.12"
 logback = "1.4.12"
 lettuce = "6.4.0.M1"
+kaml = "0.60.0"
 kord = "0.15.0-SNAPSHOT"
 kotlin-coroutines = "1.9.0-RC"
 kotlin-serialization = "1.7.1"
@@ -48,13 +49,15 @@ lettuce = { module = "io.lettuce:lettuce-core", version.ref = "lettuce" }
 # encoding/decoding purposes
 zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
 kotlin-hocon = { module = "org.jetbrains.kotlinx:kotlinx-serialization-hocon", version.ref = "kotlin-serialization" }
-kotlin-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlin-serialization"}
+kotlin-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlin-serialization" }
 
 # i18n
 icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
+kaml = { module = "com.charleskorn.kaml:kaml", version.ref = "kaml" }
 kotlin-poet = { module = "com.squareup:kotlinpoet", version.ref = "kotlin-poet" }
 ktoml-core = { module = "com.akuleshov7:ktoml-core", version.ref = "ktoml" }
 ktoml-file = { module = "com.akuleshov7:ktoml-file", version.ref = "ktoml" }
+
 
 # ktor
 ktor-http = { module = "io.ktor:ktor-http", version.ref = "ktor" }
@@ -97,14 +100,9 @@ database = [
     "exposed-kotlin-datetime"
 ]
 
-parsers = [
-    "zstd",
-    "kotlin-hocon",
-    "kotlin-protobuf",
+parsers = ["zstd", "kotlin-hocon", "kotlin-protobuf", ]
 
-]
-
-i18n = ["icu4j", "kotlin-poet", "ktoml-core", "ktoml-file" ]
+i18n = ["icu4j", "kaml", "kotlin-poet", "ktoml-core", "ktoml-file" ]
 
 ktor = [
     "ktor-http",
