--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,23 +2,24 @@
 caffeine = "3.1.8"
 exposed = "0.52.0"
 hikari = "5.1.0"
-i18n = "0.0.6-SNAPSHOT"
 icu4j = "75.1"
 interaktions = "0.1.1"
-jda = "5.0.1"
-kotlin = "2.0.0"
+jda = "5.1.0"
+kotlin = "2.0.20"
 ktor = "2.3.12"
 logback = "1.4.12"
 lettuce = "6.4.0.M1"
 kaml = "0.60.0"
 kord = "0.15.0-SNAPSHOT"
-kotlin-coroutines = "1.9.0-RC"
-kotlin-serialization = "1.7.1"
+kotlin-coroutines = "1.9.0"
+kotlin-serialization = "1.7.2"
 kotlin-poet = "1.18.1"
 ktoml = "0.5.2"
 postgresql = "42.7.3"
 prometheus = "0.16.0"
-slf4j = "2.0.13"
+redisson = "3.36.0"
+scylladb = "4.18.0.1"
+slf4j = "2.0.16"
 zstd = "1.5.6-3"
 
 [libraries]
@@ -43,9 +44,15 @@ exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exp
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
 
+# Database-Future
+scylladb-core = { module = "com.scylladb:java-driver-core", version.ref = "scylladb" }
+scylladb-builder = { module = "com.scylladb:java-driver-query-builder", version.ref = "scylladb" }
+scylladb-mapper = { module = "com.scylladb:java-driver-mapper-runtime", version.ref = "scylladb" }
+
 # Caching
 caffeine-core = { module = "com.github.ben-manes.caffeine:caffeine", version.ref = "caffeine" }
 lettuce = { module = "io.lettuce:lettuce-core", version.ref = "lettuce" }
+redisson = { module = "org.redisson:redisson", version.ref = "redisson" }
 
 # encoding/decoding purposes
 zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
@@ -100,9 +107,15 @@ database = [
     "exposed-kotlin-datetime"
 ]
 
-parsers = ["zstd", "kotlin-hocon", "kotlin-protobuf", ]
+database-future = [
+    "scylladb-core",
+    "scylladb-builder",
+    "scylladb-mapper"
+]
 
-i18n = ["icu4j", "kaml", "kotlin-poet", "ktoml-core", "ktoml-file" ]
+parsers = ["zstd", "kotlin-hocon", "kotlin-protobuf"]
+
+i18n = ["icu4j", "kaml", "kotlin-poet", "ktoml-core", "ktoml-file"]
 
 ktor = [
     "ktor-http",
@@ -114,6 +127,6 @@ ktor = [
     "ktor-utils"
 ]
 
-caching = ["caffeine-core", "lettuce"]
+caching = ["caffeine-core", "lettuce", "redisson"]
 logger = ["logback", "prometheus-httpserver", "slf4j-api", "slf4j-simple"]
 buildLogic = ["kotlin-plugin", "kotlin-serialization-plugin"]
