--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,15 +4,15 @@ exposed = "0.52.0"
 hikari = "5.1.0"
 icu4j = "75.1"
 interaktions = "0.1.1"
+jackson = "2.17.2"
 jda = "5.1.0"
 kotlin = "2.0.20"
 ktor = "2.3.12"
 logback = "1.4.12"
-lettuce = "6.4.0.M1"
 kaml = "0.60.0"
 kord = "0.15.0-SNAPSHOT"
 kotlin-coroutines = "1.9.0"
-kotlin-serialization = "1.7.2"
+kotlin-serialization = "1.7.3"
 kotlin-poet = "1.18.1"
 ktoml = "0.5.2"
 postgresql = "42.7.3"
@@ -51,12 +51,16 @@ scylladb-mapper = { module = "com.scylladb:java-driver-mapper-runtime", version.
 
 # Caching
 caffeine-core = { module = "com.github.ben-manes.caffeine:caffeine", version.ref = "caffeine" }
-lettuce = { module = "io.lettuce:lettuce-core", version.ref = "lettuce" }
 redisson = { module = "org.redisson:redisson", version.ref = "redisson" }
+
+# Serialization for i18n
+jackson-core = { module = "com.fasterxml.jackson.core:jackson-core", version.ref = "jackson" }
+jackson-properties = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-properties", version.ref = "jackson" }
+jackson-toml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-toml", version.ref = "jackson" }
+jackson-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jackson" }
 
 # encoding/decoding purposes
 zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
-kotlin-hocon = { module = "org.jetbrains.kotlinx:kotlinx-serialization-hocon", version.ref = "kotlin-serialization" }
 kotlin-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlin-serialization" }
 
 # i18n
@@ -113,7 +117,9 @@ database-future = [
     "scylladb-mapper"
 ]
 
-parsers = ["zstd", "kotlin-hocon", "kotlin-protobuf"]
+jackson = ["jackson-core", "jackson-properties", "jackson-toml", "jackson-yaml"]
+
+parsers = ["zstd", "kotlin-protobuf"]
 
 i18n = ["icu4j", "kaml", "kotlin-poet", "ktoml-core", "ktoml-file"]
 
@@ -127,6 +133,6 @@ ktor = [
     "ktor-utils"
 ]
 
-caching = ["caffeine-core", "lettuce", "redisson"]
+caching = ["caffeine-core", "redisson"]
 logger = ["logback", "prometheus-httpserver", "slf4j-api", "slf4j-simple"]
 buildLogic = ["kotlin-plugin", "kotlin-serialization-plugin"]
