--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.9"
 
 services:
-  nabi-postgres:
-    image: postgres:16.2
+  nabi-postgresql:
+    image: postgres:17.0
     container_name: "nabidb-postgresql"
     restart: always
     ports:
