--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,22 @@
 [versions]
-caffeine = "3.1.8"
-exposed = "0.52.0"
-hikari = "5.1.0"
-icu4j = "75.1"
-interaktions = "0.1.1"
-jackson = "2.17.2"
-kotlin = "2.0.20"
-ktor = "2.3.12"
-kaml = "0.60.0"
-kord = "0.15.0-SNAPSHOT"
-kotlin-coroutines = "1.9.0"
-kotlin-serialization = "1.7.3"
-kotlin-poet = "1.18.1"
-ktoml = "0.5.2"
-postgresql = "42.7.3"
-prometheus = "1.3.1"
-redisson = "3.36.0"
-slf4j = "2.0.16"
-zstd = "1.5.6-3"
+caffeine = "3.1.8" # https://github.com/ben-manes/caffeine
+exposed = "0.55.0" # https://github.com/JetBrains/Exposed
+hikari = "5.1.0" # https://github.com/brettwooldridge/HikariCP
+icu4j = "75.1" # https://github.com/unicode-org/icu
+interaktions = "0.1.1" # https://github.com/catgirlclient/DiscordInteraKTions
+jackson = "2.18.0" # https://github.com/FasterXML/jackson-databind
+kotlin = "2.0.20" # https://github.com/JetBrains/kotlin
+ktor = "2.3.12" # https://github.com/ktorio/ktor
+kaml = "0.61.0" # https://github.com/charleskorn/kaml
+kord = "0.15.0-SNAPSHOT" # https://github.com/kordlib/kord
+kotlin-coroutines = "1.9.0" # https://github.com/Kotlin/kotlinx.coroutines
+kotlin-serialization = "1.7.3" # https://github.com/Kotlin/kotlinx.serialization
+kotlin-poet = "1.18.1" # https://github.com/square/kotlinpoet
+ktoml = "0.5.2" # https://github.com/orchestr7/ktoml
+postgresql = "42.7.4" # https://github.com/pgjdbc/pgjdbc
+prometheus = "1.3.1" # https://github.com/prometheus/client_java
+redisson = "3.37.0" # https://github.com/redisson/redisson
+slf4j = "2.0.16" # https://github.com/qos-ch/slf4j
 
 [libraries]
 # Default Kotlin Libraries
@@ -49,10 +48,6 @@ jackson-core = { module = "com.fasterxml.jackson.core:jackson-core", version.ref
 jackson-properties = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-properties", version.ref = "jackson" }
 jackson-toml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-toml", version.ref = "jackson" }
 jackson-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jackson" }
-
-# encoding/decoding purposes
-zstd = { module = "com.github.luben:zstd-jni", version.ref = "zstd" }
-kotlin-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlin-serialization" }
 
 # i18n
 icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
@@ -106,8 +101,6 @@ database = [
 i18n = ["icu4j", "kaml", "kotlin-poet", "ktoml-core", "ktoml-file"]
 
 jackson = ["jackson-core", "jackson-properties", "jackson-toml", "jackson-yaml"]
-
-parsers = ["zstd", "kotlin-protobuf"]
 
 prometheus = [
     "prometheus-core",
