--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,12 @@
 [versions]
 caffeine = "3.1.8" # https://github.com/ben-manes/caffeine
+container = "1.20.2" # https://central.sonatype.com/artifact/org.testcontainers/testcontainers
 exposed = "0.55.0" # https://github.com/JetBrains/Exposed
 hikari = "5.1.0" # https://github.com/brettwooldridge/HikariCP
 icu4j = "75.1" # https://github.com/unicode-org/icu
 interaktions = "0.1.1" # https://github.com/catgirlclient/DiscordInteraKTions
 jackson = "2.18.0" # https://github.com/FasterXML/jackson-databind
+junit = "5.11.2" # https://github.com/junit-team/junit5
 kotlin = "2.0.20" # https://github.com/JetBrains/kotlin
 ktor = "2.3.12" # https://github.com/ktorio/ktor
 kaml = "0.61.0" # https://github.com/charleskorn/kaml
@@ -16,12 +18,13 @@ ktoml = "0.5.2" # https://github.com/orchestr7/ktoml
 postgresql = "42.7.4" # https://github.com/pgjdbc/pgjdbc
 prometheus = "1.3.1" # https://github.com/prometheus/client_java
 redisson = "3.37.0" # https://github.com/redisson/redisson
+shadow = "8.3.3"
 slf4j = "2.0.16" # https://github.com/qos-ch/slf4j
 
 [libraries]
 # Default Kotlin Libraries
-kotlin-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization"}
-kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines"}
+kotlin-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization" }
+kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
 
 # Discord libraries/frameworks
 kord-common = { module = "dev.kord:kord-core", version.ref = "kord" }
@@ -73,6 +76,11 @@ prometheus-httpserver = { module = "io.prometheus:prometheus-metrics-exporter-ht
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 
+# Tests
+container = { module = "org.testcontainers:testcontainers", version.ref = "container" }
+container-junit = { module = "org.testcontainers:junit-jupiter", version.ref = "container" }
+junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit"}
+
 # plugins for build-logic
 kotlin-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-serialization-plugin = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
@@ -102,10 +110,7 @@ i18n = ["icu4j", "kaml", "kotlin-poet", "ktoml-core", "ktoml-file"]
 
 jackson = ["jackson-core", "jackson-properties", "jackson-toml", "jackson-yaml"]
 
-prometheus = [
-    "prometheus-core",
-    "prometheus-httpserver"
-]
+prometheus = ["prometheus-core", "prometheus-httpserver"]
 
 ktor = [
     "ktor-http",
@@ -119,4 +124,5 @@ ktor = [
 
 caching = ["caffeine-core", "redisson"]
 logger = ["slf4j-api", "slf4j-simple"]
+test = ["container", "container-junit", "junit-jupiter"]
 buildLogic = ["kotlin-plugin", "kotlin-serialization-plugin"]
