--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,6 +19,9 @@
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
+    "@iconify/core": "^2.0.2",
+    "@iconify/react": "^5.0.2",
+    "@iconify-icons/uil": "^1.2.3",
     "@types/node": "^22.8.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -26,7 +29,6 @@
     "@unocss/vite": "^0.63.6",
     "@unocss/preset-web-fonts": "^0.63.6",
     "@vitejs/plugin-react": "^4.3.3",
-    "iconify": "^1.4.0",
     "prettier": "^3.3.3",
     "sass": "^1.80.4",
     "typescript": "^5.4.5",
