--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ icu4j = "75.1" # https://github.com/unicode-org/icu
 interaktions = "0.1.1" # https://github.com/catgirlclient/DiscordInteraKTions
 jackson = "2.18.0" # https://github.com/FasterXML/jackson-databind
 junit = "5.11.2" # https://github.com/junit-team/junit5
-kotlin = "2.0.20" # https://github.com/JetBrains/kotlin
+kotlin = "2.0.21" # https://github.com/JetBrains/kotlin
 ktor = "2.3.12" # https://github.com/ktorio/ktor
 kaml = "0.61.0" # https://github.com/charleskorn/kaml
 kord = "0.15.0-SNAPSHOT" # https://github.com/kordlib/kord
@@ -18,6 +18,7 @@ ktoml = "0.5.2" # https://github.com/orchestr7/ktoml
 postgresql = "42.7.4" # https://github.com/pgjdbc/pgjdbc
 prometheus = "1.3.1" # https://github.com/prometheus/client_java
 redisson = "3.37.0" # https://github.com/redisson/redisson
+scylladb-driver = "4.18.0.1" # https://github.com/scylladb/java-driver
 shadow = "8.3.3"
 slf4j = "2.0.16" # https://github.com/qos-ch/slf4j
 
@@ -42,6 +43,10 @@ exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "e
 exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
+
+scylladb-driver-core = { module = "com.scylladb:java-driver-core", version.ref = "scylladb-driver" }
+scylladb-driver-query-builder = { module = "com.scylladb:java-driver-query-builder", version.ref = "scylladb-driver" }
+scylladb-driver-mapper-runtime = { module = "com.scylladb:java-driver-mapper-runtime", version.ref = "scylladb-driver" }
 
 # Caching
 caffeine-core = { module = "com.github.ben-manes.caffeine:caffeine", version.ref = "caffeine" }
@@ -105,6 +110,12 @@ database = [
     "exposed-dao",
     "exposed-jdbc",
     "exposed-kotlin-datetime"
+]
+
+scylladb = [
+    "scylladb-driver-core",
+    "scylladb-driver-query-builder",
+    "scylladb-driver-mapper-runtime"
 ]
 
 i18n = ["icu4j", "kaml", "kotlin-poet", "ktoml-core", "ktoml-file"]
