--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,13 +2,13 @@ version: "3.9"
 
 services:
   nabi-postgresql:
-    image: postgres:17.0
+    image: postgres:17.2
     container_name: "nabidb-postgresql"
     restart: always
     ports:
       - "5432"
     env_file:
-      - postgres.env
+      - ../postgres.env
 
   nabi-dragonflydb:
     image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
