--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3.9"
-
 services:
+  # TODO: Eventually phase out postgres for scylladb
   nabi-postgresql:
-    image: postgres:17.2
+    image: postgres
+    pull_policy: 'always'
     container_name: "nabidb-postgresql"
     restart: always
     ports:
@@ -10,10 +10,28 @@ services:
     env_file:
       - ../postgres.env
 
-  nabi-dragonflydb:
-    image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
+  nabi-garnet:
+    image: 'ghcr.io/microsoft/garnet'
     pull_policy: 'always'
-    container_name: "nabi-dragonfly"
+    container_name: "nabi-garnet"
     restart: always
+    ulimits:
+      memlock: -1
     ports:
       - "6380:6379"
+
+  nabi-scylladb:
+    image: scylladb/scylla
+    pull_policy: 'always'
+    container_name: 'nabi-scylladb'
+    restart: always
+    ports:
+      - "2345"
+
+  nabi-prometheus:
+    image: prom/prometheus
+    pull_policy: 'always'
+    container_name: 'nabi-prometheus'
+    restart: always
+    ports:
+      - '3030'
