--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,24 +16,24 @@
     "million": "^3.1.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
-    "@iconify/core": "^3.0.0",
-    "@iconify/react": "^5.1.0",
+    "@iconify/core": "^3.1.0",
+    "@iconify/react": "^5.2.0",
     "@iconify-icons/uil": "^1.2.3",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/react-router-dom": "^5.3.3",
-    "@unocss/vite": "^0.63.6",
-    "@unocss/preset-web-fonts": "^0.65.3",
+    "@unocss/vite": "^65.4.3",
+    "@unocss/preset-web-fonts": "^65.4.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "prettier": "^3.4.2",
-    "sass": "^1.83.0",
-    "typescript": "^5.7.2",
-    "unocss": "^0.65.3",
-    "vite": "^6.0.5",
-    "vitest": "^2.1.8"
+    "prettier": "^3.5.0",
+    "sass": "^1.84.0",
+    "typescript": "^5.7.3",
+    "unocss": "^65.4.3",
+    "vite": "6.0.9",
+    "vitest": "3.0.5"
   }
 }
